welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: not found: value maths
		if (nums(x)+5==nums(x+1) && maths.abs(nums(x+2)-nums(x)+1<=1)) {return true}
                                            ^